[package]
name = "jsondb-high"
version = "4.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12", features = ["napi4", "async", "serde-json"] }
napi-derive = "2.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
chrono = "0.4"
anyhow = "1.0"
once_cell = "1.18"
crc32fast = "1.3"
crossbeam = "0.8"
libc = "0.2"
tokio = { version = "1", features = ["full"] }
rayon = "1.10"
num_cpus = "1.16"
regex = "1.10"

[build-dependencies]
napi-build = "2.0"
